Quick slideout panel style tweaks (fix overlapping content)

--- a/ui/less/styles.less
+++ b/ui/less/styles.less
@@ -165,14 +165,14 @@ nav.hamburger.persistent {
   top: 0;
   bottom: 0;
   right: 0;
-  z-index: 0;
+  z-index: 1;
   width: 256px;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   display: none;
 }
 
-.slideout-menu h2, h3 {
+.slideout-menu h2, h3, a {
     color: white;
 }
 
